--- a/TwoKeysVerification/TwoKeysVerification.csproj
+++ b/TwoKeysVerification/TwoKeysVerification.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CertificateConfiguration.cs" />
+    <Compile Include="CertificateExplorerProvider.cs" />
     <Compile Include="CertificateGenerationException.cs" />
     <Compile Include="CertificateGenerationProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="X509Certificate2Wrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
